# cwa_reader_rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test.py
.github/workflows/: CI.yml
src/: errors.rs  header.rs  lib.rs  package.rs
tests/: test_csv_writer.py  test_reference_parity.py
tests/reference_data/openmovement/: README.md  example-610-steps.cwa.cwa-convert.full.csv
tools/cwa_reference/: README.md  benchmark_scan.py  common.py  compare_windows.py
