[package]
name = "cwa_reader_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cwa_reader_rs"
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
pyo3 = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
